<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?tink_backgroundColor">

  <com.tink.moneymanagerui.view.TinkToolbar
    android:id="@+id/tink_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:transitionName="@string/tink_toolbar_transition"
    app:buttonGravity="center_vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:navigationContentDescription="@string/tink_nav_app_bar_navigate_up_description"
    app:navigationIcon="?android:homeAsUpIndicator" />

  <TextView
    android:id="@+id/emptyStateText"
    style="@style/tink_deci"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginStart="48dp"
    android:layout_marginEnd="48dp"
    android:gravity="center"
    android:text="@string/tink_insights_empty_state_text"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tink_toolbar"/>

  <ProgressBar
    android:id="@+id/insightsProgressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:indeterminateTint="?tink_colorAccent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>